# Multimodal-Knowledge-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  ENTERPRISE_RAG_V1_1.md  FRONTEND_INTEGRATION.md  Makefile  RAG_AUDIT.md  README.md  alembic.ini  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_security_hardening.py  0003_fts_entities_chunks.py  0004_conversation_states_memory.py  0005_documents_user_id_nullable.py
app/: main.py
app/api/: dependencies.py
app/auth/: dependencies.py  jwt.py  passwords.py  schemas.py  services.py
app/core/: exceptions.py  lifecycle.py  logging.py  otel.py  resilience.py  settings.py  telemetry.py
app/db/: chroma_client.py  (+1 more)
frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
reports/: ablation_report.md  benchmark_results.json  benchmark_summary.md  latency_report.md  realism_audit.md  release_gate_results.md  retrieval_breakdown.md  retrieval_diagnostics.json  retrieval_diagnostics.md
scripts/: analyze_retrieval_thresholds.py  audit_corpus.py  build_retrieval_stress_corpus.py  check_release_gates.py  compare_benchmarks.py  dev.ps1  evaluate_retrieval.py  generate_realistic_eval_corpus.py  generate_retrieval_report.py  local_setup.py  ports.ps1  repair_corpus.py  run_ablation_retrieval_benchmark.py  run_benchmark_v11.py  run_retrieval_diagnostics.py  run_retrieval_stress_ablation.py  seed_benchmark_corpus.py  seed_retrieval_stress_corpus.py
(+154 files in other folders)
