[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-rag-backend"
version = "0.1.0"
description = "Phase 1 PDF RAG backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "PyMuPDF>=1.24.0",
  "langchain-text-splitters>=0.3.0",
  "sentence-transformers>=3.0.0",
  "chromadb>=0.5.5",
  "google-genai>=0.3.0",
  "httpx>=0.27.0",
  "tiktoken>=0.7.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "email-validator>=2.2.0",
  "aiosqlite>=0.20.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.7",
  "mypy>=1.11.1",
  "pre-commit>=3.8.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]
